--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include requirements.txt
 include requirements-dev.txt
 include VERSION
 
+recursive-include wabclient *
 recursive-include tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
